Update contact information and add social links

--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
 
             <div id="contact-us" class="footer-card bg-indigo-50">
                 <h2 class="text-3xl font-black uppercase italic text-indigo-900 mb-6">Contact Us</h2>
-                <p class="text-gray-600 leading-relaxed font-medium mb-4">Agar aapko resources access karne mein koi dikkat ho rahi hai ya aap koi feedback dena chahte hain, toh humein contact karein, gamil - gajendrakushwah1027@gmail.com:</p>
+                <p class="text-gray-600 leading-relaxed font-medium mb-4">Agar aapko resources access karne mein koi dikkat ho rahi hai ya aap koi feedback dena chahte hain, toh humein contact karein, gamil - gajendrakushwah1027@gmail.com</p>
                 <div class="flex flex-wrap gap-4">
-                    <a href="#" class="bg-red-600 text-white px-6 py-3 rounded-xl text-xs font-black uppercase italic">YouTube Channel</a>
-                    <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-xl text-xs font-black uppercase italic">Telegram Support</a>
+                    <a href="https://youtube.com/@notjitu1022?si=ZivLdwErKW40-_87" class="bg-red-600 text-white px-6 py-3 rounded-xl text-xs font-black uppercase italic">YouTube Channel</a>
+                    <a href="https://www.instagram.com/notjitu_fz/" class="bg-purple-600 text-white px-6 py-3 rounded-xl text-xs font-black uppercase italic">Instagram</a>
+                    <a href="jituearningtips.blogspot.com" class="bg-green-600 text-white px-6 py-3 rounded-xl text-xs font-black uppercase italic">For support me 🙏🥺>Fo>
                 </div>
             </div>
 
