Update support link text and URL in index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="flex flex-wrap gap-4">
                     <a href="https://youtube.com/@notjitu1022?si=ZivLdwErKW40-_87" class="bg-red-600 text-white px-6 py-3 rounded-xl text-xs font-black uppercase italic">YouTube Channel</a>
                     <a href="https://www.instagram.com/notjitu_fz/" class="bg-purple-600 text-white px-6 py-3 rounded-xl text-xs font-black uppercase italic">Instagram</a>
-                    <a href="jituearningtips.blogspot.com" class="bg-green-600 text-white px-6 py-3 rounded-xl text-xs font-black uppercase italic">For support me</a>
+                    <a href="https://jituearningtips.blogspot.com" class="bg-green-600 text-white px-6 py-3 rounded-xl text-xs font-black uppercase italic">support me here 🙏🥺</a>
                 </div>
             </div>
 
