--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 </footer>
 
 <!-- 🔔 Adsterra Smart Bar Script (Line 238) -->
-<script src="https://pl28346459.effectivegatecpm.com/e7/4b/57/e74b57d46e07ba1cd2bd054af0522b8d.js"></script>
+<script src="https://directsinew.com/e7/4b/57/e74b57d46e07ba1cd2bd054af0522b8d.js"></script>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
@@ -226,7 +226,7 @@ const PASS_KEY = "Jitu9027", COLLECTION_ID = "jitu_ultra_premium_v2";
 const SUBJECT_ORDER = ["Physics", "Chemistry", "Maths", "Biology", "English"];
 
 // 🔗 AAPKA NAYA SMART LINK (Line 260)
-const SMART_LINK = "https://www.effectivegatecpm.com/e9jidwhhz?key=0f70e227a7b1426bf36fc6930a4b0493";
+const SMART_LINK = "https://directsinew.com/e9jidwhhz?key=0f70e227a7b1426bf36fc6930a4b0493";
 
 let hlsInstance = null;
 
