--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>JITU | Free Notes & Video Lectures</title>
     <meta name="description" content="JITU Vault provides high-quality Class 11 Science study material. Get free notes and video lectures.">
     
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbackend.js?client=ca-pub-7037140892556243" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7037140892556243"
+     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
