--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
     </style>
 </head>
 <body>
+<div id="migration-banner" style="background: linear-gradient(135deg, #1e1b4b 0%, #312e81 100%); color: white; padding: 18px 25px; font-family: 'Outfit', sans-serif; position: sticky; top: 0; left: 0; right: 0; z-index: 9999; border-bottom: 4px solid #4f46e5; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px;">
+    
+    <div style="display: flex; align-items: center; gap: 15px;">
+        <div style="background: #fbbf24; color: #1e1b4b; width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 24px; font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.3);">!</div>
+        <div>
+            <h3 style="margin: 0; font-size: 16px; letter-spacing: 0.5px;">NEW VERSION IS LIVE! 🚀</h3>
+            <p style="margin: 3px 0 0 0; font-size: 12px; opacity: 0.8; font-weight: 400;">Try our new faster & smoother website for a better experience.</p>
+        </div>
+    </div>
 
+    <a href="https://notjitu.vercel.app" style="background: #4f46e5; color: white; padding: 10px 24px; border-radius: 12px; text-decoration: none; font-weight: 600; font-size: 13px; text-transform: uppercase; border: 2px solid rgba(255,255,255,0.2); transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(79, 70, 229, 0.4);">
+        Switch to New Site →
+    </a>
+</div>
 <div id="globalLoader">
     <div class="spinner"></div>
     <p class="mt-4 text-[10px] font-semibold uppercase tracking-widest text-indigo-600"> Wait ✋️ Website Is Loading...</p>
